WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313004
will-change CSS property doesn't serialize correctly when used with either non-property idents or idents in a non-standard case
https://bugs.webkit.org/show_bug.cgi?id=313004
Summary
will-change CSS property doesn't serialize correctly when used with either no...
Sam Weinig
Reported
2026-04-22 10:18:09 PDT
The `will-change` property doesn't serialize correctly when used with either non-property idents or idents in a non-standard case.
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2026-04-22 11:49:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63345
EWS
Comment 2
2026-04-23 21:38:32 PDT
Committed
311918@main
(6134ce6f25c7): <
https://commits.webkit.org/311918@main
> Reviewed commits have been landed. Closing PR #63345 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-23 21:39:11 PDT
<
rdar://problem/175482352
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug