will-change CSS property doesn't serialize correctly when used with either non-property idents or idents in a non-standard case https://bugs.webkit.org/show_bug.cgi?id=313004

Reviewed by Darin Adler.

Updates `will-change` to store the identifier strings for all provided values,
storing a CSSPropertyID only as a cache. This allows us to serialize correctly
fixing a number of WPT test cases.

Additionally, moves CSSPropertyID lookup to style building, making the parser
trivial enough that it can be fully generated.

Adds a minor optimization taking advantage of the fact that the length of the
Style::WillChange list, if there is one, always matches the CSSValue list's
length, we can upfront allocate WillChangeAnimatableFeatures::Data using a
TrailingArray, avoiding an allocation when `will-change` contains more than
one identifier.

Removes imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-invalid.html
from TestExpectations. It is passing without crashing.

Pulls in wpt/css/css-will-change from bf4d00e68bc328afb453ce53706a014e4b1ca5b1.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-computed.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-will-change/parsing/will-change-valid.html:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/CSSValueKeywords.in:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+WillChange.cpp: Removed.
* Source/WebCore/css/parser/CSSPropertyParserConsumer+WillChange.h: Removed.
* Source/WebCore/css/parser/CSSPropertyParserCustom.h:
* Source/WebCore/style/values/will-change/StyleWillChange.cpp:
* Source/WebCore/style/values/will-change/StyleWillChange.h:

Canonical link: https://commits.webkit.org/311918@main